# anankasm

./: .gitattributes  .gitignore  README.mkd  TODO.mkd  abcde.cf  abcde.sh  abcde_replaygain.patch  anankasm.mk  anankasm.mk.in  anankasm.txt  bugs.txt  check-environment.rkt  component1.rkt  configure.ac  discogs.scm  dist.scm  dist.scm.in  driver.sh  encode.rkt  entry-point.rkt  findbin.scm  forest.scm  histogram.scm  interface.scm  locktree.sh  munge-tag.scm  munge_tag.sh  naturalize.mk  naturalize.scm  new_rgparser.scm  options.scm  playlist.sh  replaygain.scm  rgbug.txt  rip.rkt  sync_music.sh  taglib.scm  test-utility.rkt  test.scm  usage.txt  (+3 more)
.github/workflows/: run-tests.yml
test/: component1.rkt  encode.rkt  rip.rkt  util.rkt
